--- a/Module05/MaxFlow.ipynb
+++ b/Module05/MaxFlow.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMR8qIfSVsDPpR+AqyN5CXt",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/CE339/CES-S24/blob/main/Module05/MaxFlow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Initializing Google Colab**"
-      ],
       "metadata": {
         "id": "25EJeMvwKF0h"
-      }
+      },
+      "source": [
+        "**Initializing Google Colab**"
+      ]
     },
     {
       "cell_type": "code",
@@ -49,52 +33,57 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.chdir('/content/drive/MyDrive/Colab Notebooks/')"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "xmw13J7pKO7_"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "os.chdir('/content/drive/MyDrive/Colab Notebooks/')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pyomo\n",
-        "!apt-get install -y -qq coinor-cbc  #!apt-get install -y -qq glpk-utils"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Eba1nFWgKiVr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install pyomo\n",
+        "!apt-get install -y -qq coinor-cbc  #!apt-get install -y -qq glpk-utils"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Importing Pyomo and CBC Solver**"
-      ],
       "metadata": {
         "id": "Ejh8CBfyLCZj"
-      }
+      },
+      "source": [
+        "**Importing Pyomo and CBC Solver**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "-DLDB4bOLHWz"
+      },
+      "outputs": [],
       "source": [
         "from pyomo.environ import *\n",
         "#Import solver\n",
         "opt=SolverFactory('cbc',executable='/usr/bin/cbc')"
-      ],
-      "metadata": {
-        "id": "-DLDB4bOLHWz"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "3qGsVossLW8T"
+      },
+      "outputs": [],
       "source": [
         "from math import inf\n",
         "infinity = float('inf')\n",
@@ -116,7 +105,6 @@
         "model.c3 = Constraint(expr = model.x13 - model.x35 == 0)\n",
         "model.c4 = Constraint(expr = model.x14 + model.x24  -model.x45 == 0)\n",
         "model.c5 = Constraint(expr = model.x25 + model.x35  +model.x45 -model.y == 0)\n",
-        "#model.c6 = Constraint(expr = model.x12 + model.x13 + model.x14 -(model.x25 + model.x35  +model.x45) == 0)\n",
         "\n",
         "#Objective Function\n",
         "model.z  =  Objective(expr = model.y, sense=maximize)\n",
@@ -126,73 +114,84 @@
         "#------------------------------------------------------------------------------\n",
         "model.dual = Suffix(direction=Suffix.IMPORT_EXPORT)\n",
         "model.rc = Suffix(direction=Suffix.IMPORT_EXPORT)"
-      ],
-      "metadata": {
-        "id": "3qGsVossLW8T"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Optimizing the model instance**"
-      ],
       "metadata": {
         "id": "Pywr6kNJOO46"
-      }
+      },
+      "source": [
+        "**Optimizing the model instance**"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "results = opt.solve(model, tee=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Uj7ttFgpNinB"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "results = opt.solve(model, tee=True)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Display Results**"
-      ],
       "metadata": {
         "id": "un-asORNOXBR"
-      }
+      },
+      "source": [
+        "**Display Results**"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(model.display())"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "3uFr7JyEN8L5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(model.display())"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Looking at the Dual Variables Associated with the Constraints**"
-      ],
       "metadata": {
         "id": "aWSBpPZdPHkj"
-      }
+      },
+      "source": [
+        "**Looking at the Dual Variables Associated with the Constraints**"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.dual.pprint() #Printing Dual Vars\n",
-        "model.rc.pprint() #Printing Reduced Costs"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "oAwk1lXO3RAT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model.dual.pprint() #Printing Dual Vars\n",
+        "model.rc.pprint() #Printing Reduced Costs"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMR8qIfSVsDPpR+AqyN5CXt",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
